Cherry-pick 89983a32335b. rdar://173718365

[css-anchor-position-1] Element with display: contents doesn't establish an anchor scope when using anchor-scope
    rdar://172355302
    https://bugs.webkit.org/show_bug.cgi?id=309239

    Reviewed by Antti Koivisto.

    anchorScopeForAnchorName figures out which ancestor establishes an anchor scope
    covering the element. It reads the value of 'anchor-scope' property from the style
    returned by Element::renderStyle(). But renderStyle() is nullptr if the element
    is display: contents. Change it to use renderOrDisplayContentsStyle() instead.

    Test: imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scope-display-contents.tentative.html

    * LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-scope-display-contents.tentative-expected.txt:
    * Source/WebCore/dom/Element.cpp:
    (WebCore::Element::storeDisplayContentsOrNoneStyle):
    * Source/WebCore/style/AnchorPositionEvaluator.cpp:
    (WebCore::Style::anchorScopeForAnchorName):

    Canonical link: https://commits.webkit.org/309946@main

Identifier: 305413.596@safari-7624-branch